# text-based_almes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Character.cc  Makefile  NPC.cc  README.md  character.cc  character.cpp  intro.txt
.github/workflows/: cpplint.yml  include-guards.yml  super-linter.yml
doc/: CHANGELOG.md  char_pseudo.txt  intro.txt
include/: catch.hpp  character.h  npc.h
src/: character.cc  main.cc  npc.cc  run.cc
tests/: test.cc  test_char.cc  test_main.cc  test_npc.cc
tools/scripts/: buildAndRun.sh  buildAndTest.cmd  buildAndTest.sh
